<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_overflow" >
        
        <menu>
             <item 
                 android:id="@+id/settings"
                 android:title="@string/settings"
                 android:icon="@drawable/ic_action_settings" />
       </menu>
       
    </item>
    
    <item
	    android:id="@+id/return_button"
	    android:title="@string/returnMain"
	    android:showAsAction="always" />
    
    <item
        android:id="@+id/deleteURLs"
        android:title="@string/deletebkmrk"
        android:icon="@drawable/cancel_icon"
        android:showAsAction="always" />

</menu>
