<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutApp" >

    <ImageView
        android:contentDescription="@string/image_icon"
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/cheetah" />

    <TextView
        android:id="@+id/mainHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/app_icon"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/app_icon"
        android:layout_toRightOf="@+id/app_icon"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/ABOUT"
        android:textSize="25sp" />

        <WebView
            android:id="@+id/aboutVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/appDetailedInfo"
            android:layout_alignLeft="@+id/aboutHeader"
            android:layout_below="@+id/aboutHeader" />

        <TextView
            android:id="@+id/appDetailedInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/aboutVideo"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/app_details"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/aboutHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/app_icon"
            android:layout_below="@+id/app_icon"
            android:gravity="center"
            android:text="@string/aboutHeader"
            android:textSize="25sp" />

 </RelativeLayout>