<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BookmarkActivity" >

    <EditText
        android:id="@+id/typedBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/InsertButton"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/urlPrompt" />

    <TextView
        android:id="@+id/BookmarkLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/typedBookmark"
        android:layout_below="@+id/typedBookmark"
        android:text="@string/bookmarkAddDescription" />

    <ListView
        android:id="@+id/DatabaseContent"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/BookmarkLabel" >
    </ListView>

    <Button
        android:id="@+id/InsertButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BookmarkLabel"
        android:layout_alignRight="@+id/DatabaseContent"
        android:onClick="insertBookmarks"
        android:text="@string/Insert" />

</RelativeLayout>